# ligo_localization

./: .gitignore  CMakeLists.txt  package.xml
config/: avia.yaml  mid360.yaml  pgo.yaml
include/backend_optimization/global_localization/: EnuCoordinate.hpp  GnssProcessor.hpp  Relocalization.hpp
include/gnss_factor/: gnss_lio_rel_factor.hpp
launch/: gdb_debug_example.launch  mapping_avia.launch  mapping_avia_deg.launch  mapping_hesai32.launch  mapping_mid360.launch  mapping_robosense.launch  mapping_velody16.launch
rviz_cfg/: loam_livox.rviz
src/: Estimator.cpp  Estimator.h  GNSS_Assignment.cpp  GNSS_Initialization.cpp  GNSS_Processing_fg.cpp  GNSS_Processing_fg.h  IMU_Processing.cpp  laserMapping.cpp  parameters.cpp  parameters.h
